fixed image squashing

--- a/theme/static/css/styles.css
+++ b/theme/static/css/styles.css
@@ -174,5 +174,5 @@ img {
   text-align: center;
   height: 30px;
   background: url('../images/ornament1blue.svg') transparent center no-repeat;
-  background-size: 100px 30px;
+  background-size: 43px 30px;
 }
